--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ color: black;
 font-size: 30px;
 } */
 
+.imgwidth25{
+width:25px;
+height:25px;
+}
+
 .displaytitle{
 font-size: 6rem;
 font-weight: 300;
@@ -71,7 +76,7 @@ font-weight: bold;
 
 .movie-tag-text{
    color: #333333;
-   font-size: 12px;
+   font-size: 13px;
 }
 .cast{
     color: #666;
@@ -108,7 +113,7 @@ border-radius: 10px;
 border: 2px solid #4388CC;
 background: #4388CC;
 color:white;
-padding: 10px;
+padding: 7px;
 margin: 5px;
 overflow:auto;
 max-height: 300px;
@@ -226,3 +231,55 @@ margin-top:20px;
     border-radius: 10px;
 }
 /*#endregion seatselection.html*/
+
+/* Hamburger classes */
+.navibar {
+    overflow: hidden;
+    background-color: #212529;
+  }
+  
+  .navibar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .navibar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .navactive {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .navibar .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .navibar a:not(:first-child) {display: none;}
+    .navibar a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .navibar.responsive {position: relative;}
+    .navibar.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .navibar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
